@@ -5,6 +5,7 @@ import edu.illinois.library.cantaloupe.config.Key;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
+import java.lang.reflect.InvocationTargetException;
 import java.util.Arrays;
 import java.util.Collections;
 import java.util.HashSet;
@@ -46,8 +47,7 @@ public final class CacheFactory {
      * @return Set of single instances of all available source caches.
      */
     public static Set<SourceCache> getAllSourceCaches() {
-        return new HashSet<>(
-                Collections.singletonList(new FilesystemCache()));
+        return new HashSet<>(Collections.singletonList(new FilesystemCache()));
     }
 
     /**
@@ -55,21 +55,18 @@ public final class CacheFactory {
      *
      * <p>This method respects live changes in application configuration.</p>
      *
-     * @return The shared DerivativeCache instance, or {@literal null} if a
-     *         derivative cache is not available.
+     * @return The shared instance, or {@literal null} if a derivative cache
+     *         is not available.
      */
     public static DerivativeCache getDerivativeCache() {
-        // The implementation is explained in "Fixing Double-Checked Locking
-        // using Volatile":
-        // http://www.cs.umd.edu/~pugh/java/memoryModel/DoubleCheckedLocking.html
         DerivativeCache cache = null;
-        final Configuration config = Configuration.getInstance();
-        if (config.getBoolean(Key.DERIVATIVE_CACHE_ENABLED, false)) {
-            final String unqualifiedName = config.getString(Key.DERIVATIVE_CACHE);
-            if (unqualifiedName != null && unqualifiedName.length() > 0) {
-                final String qualifiedName =
-                        CacheFactory.class.getPackage().getName() + "." +
-                                unqualifiedName;
+
+        if (isDerivativeCacheEnabled()) {
+            final Configuration config = Configuration.getInstance();
+            final String unqualifiedName = config.getString(Key.DERIVATIVE_CACHE, "");
+
+            if (!unqualifiedName.isEmpty()) {
+                final String qualifiedName = getQualifiedName(unqualifiedName);
                 cache = derivativeCache;
                 if (cache == null ||
                         !cache.getClass().getName().equals(qualifiedName)) {
@@ -81,18 +78,26 @@ public final class CacheFactory {
                                     "instance");
                             try {
                                 Class<?> implClass = Class.forName(qualifiedName);
-                                cache = (DerivativeCache) implClass.newInstance();
+                                cache = (DerivativeCache)
+                                        implClass.getDeclaredConstructor().newInstance();
                                 setDerivativeCache(cache);
                             } catch (ClassNotFoundException e) {
                                 cache = null;
                                 LOGGER.error("Class not found: {}", e.getMessage());
-                            } catch (IllegalAccessException | InstantiationException e) {
+                            } catch (NoSuchMethodException |
+                                    IllegalAccessException |
+                                    InstantiationException |
+                                    InvocationTargetException e) {
                                 cache = null;
                                 LOGGER.error(e.getMessage());
                             }
                         }
                     }
                 }
+            } else {
+                LOGGER.warn("Derivative cache is enabled, but {} is not set",
+                        Key.DERIVATIVE_CACHE);
+                shutdownDerivativeCache();
             }
         }
         return cache;
@@ -103,39 +108,40 @@ public final class CacheFactory {
      *
      * <p>This method respects live changes in application configuration.</p>
      *
-     * @return The shared SourceCache instance, or {@literal null} if a
-     *         source cache is not available.
+     * @return The shared instance, or {@literal null} if the source cache
+     *         implementation specified in the configuration is invalid or not
+     *         specified.
      */
     public static SourceCache getSourceCache() {
-        // The implementation is explained in "Fixing Double-Checked Locking
-        // using Volatile":
-        // http://www.cs.umd.edu/~pugh/java/memoryModel/DoubleCheckedLocking.html
         SourceCache cache = null;
+
         final Configuration config = Configuration.getInstance();
-        if (config.getBoolean(Key.SOURCE_CACHE_ENABLED, false)) {
-            final String unqualifiedName = config.getString(Key.SOURCE_CACHE);
-            if (unqualifiedName != null && unqualifiedName.length() > 0) {
-                final String qualifiedName =
-                        CacheFactory.class.getPackage().getName() + "." +
-                                unqualifiedName;
-                cache = sourceCache;
-                if (cache == null || !cache.getClass().getName().equals(qualifiedName)) {
-                    synchronized (CacheFactory.class) {
-                        if (cache == null ||
-                                !cache.getClass().getName().equals(qualifiedName)) {
-                            LOGGER.debug("getSourceCache(): implementation " +
-                                    "changed; creating a new instance");
-                            try {
-                                Class<?> implClass = Class.forName(qualifiedName);
-                                cache = (SourceCache) implClass.newInstance();
-                                setSourceCache(cache);
-                            } catch (ClassNotFoundException e) {
-                                cache = null;
-                                LOGGER.error("Class not found: {}", e.getMessage());
-                            } catch (IllegalAccessException | InstantiationException e) {
-                                cache = null;
-                                LOGGER.error(e.getMessage());
-                            }
+        final String unqualifiedName = config.getString(Key.SOURCE_CACHE, "");
+
+        if (!unqualifiedName.isEmpty()) {
+            final String qualifiedName = getQualifiedName(unqualifiedName);
+            cache = sourceCache;
+            if (cache == null ||
+                    !cache.getClass().getName().equals(qualifiedName)) {
+                synchronized (CacheFactory.class) {
+                    if (cache == null ||
+                            !cache.getClass().getName().equals(qualifiedName)) {
+                        LOGGER.debug("getSourceCache(): implementation " +
+                                "changed; creating a new instance");
+                        try {
+                            Class<?> implClass = Class.forName(qualifiedName);
+                            cache = (SourceCache)
+                                    implClass.getDeclaredConstructor().newInstance();
+                            setSourceCache(cache);
+                        } catch (ClassNotFoundException e) {
+                            cache = null;
+                            LOGGER.error("Class not found: {}", e.getMessage());
+                        } catch (NoSuchMethodException |
+                                IllegalAccessException |
+                                InstantiationException |
+                                InvocationTargetException e) {
+                            cache = null;
+                            LOGGER.error(e.getMessage());
                         }
                     }
                 }
@@ -144,15 +150,16 @@ public final class CacheFactory {
         return cache;
     }
 
-    public static synchronized void shutdownCaches() {
-        LOGGER.debug("Shutting down caches");
+    private static String getQualifiedName(String unqualifiedName) {
+        return unqualifiedName.contains(".") ?
+                unqualifiedName :
+                CacheFactory.class.getPackage().getName() + "." +
+                        unqualifiedName;
+    }
 
-        if (derivativeCache != null) {
-            derivativeCache.shutdown();
-        }
-        if (sourceCache != null) {
-            sourceCache.shutdown();
-        }
+    private static boolean isDerivativeCacheEnabled() {
+        final Configuration config = Configuration.getInstance();
+        return config.getBoolean(Key.DERIVATIVE_CACHE_ENABLED, false);
     }
 
     /**
@@ -189,6 +196,27 @@ public final class CacheFactory {
 
         LOGGER.debug("setSourceCache(): initializing the new instance");
         sourceCache.initialize();
+    }
+
+    public static synchronized void shutdownCaches() {
+        shutdownDerivativeCache();
+        shutdownSourceCache();
+    }
+
+    private static synchronized void shutdownDerivativeCache() {
+        LOGGER.debug("Shutting down the derivative cache");
+        if (derivativeCache != null) {
+            derivativeCache.shutdown();
+            derivativeCache = null;
+        }
+    }
+
+    private static synchronized  void shutdownSourceCache() {
+        LOGGER.debug("Shutting down the source cache");
+        if (sourceCache != null) {
+            sourceCache.shutdown();
+            sourceCache = null;
+        }
     }
 
     private CacheFactory() {}
